feat: 로그인 및 유저별 스케줄 기능 추가
- /login API 및 간단 로그인 화면 구현
- userId 기반 Shift 조회/등록/수정/삭제
- 프론트 axios client를 백엔드 8080으로 통합
- CORS 설정 추가 및 전체 흐름 점검